🔨 :hammer: [Fix] Realign, resize following list

--- a/src/components/MessagesBar/FollowingItem/style.module.css
+++ b/src/components/MessagesBar/FollowingItem/style.module.css
@@ -1,18 +1,18 @@
 .followingItem {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
   padding: 5px;
   cursor: pointer;
   font-size: 17px;
+  width: 100%;
 }
 
 .followingImg {
-  max-width: 65px;
   height: 100px;
   object-fit: cover;
   border-radius: 5px;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 @media (max-width: 660px) {
