--- a/src/components/MessagesBar/FollowingList/style.module.css
+++ b/src/components/MessagesBar/FollowingList/style.module.css
@@ -1,5 +1,6 @@
 .followingList {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  display: grid;
+  grid: auto/repeat(auto-fit, minmax(55px, 1fr));
+  justify-items: center;
+  grid-gap: 15px;
 }
