--- a/src/components/Sidebar/FriendList/style.module.css
+++ b/src/components/Sidebar/FriendList/style.module.css
@@ -2,4 +2,11 @@
   padding: 0;
   margin: 0;
   list-style: none;
+  padding: 5px 10px;
+}
+
+@media (max-width: 900px) {
+  .friendList {
+    padding: 5px 10px;
+  }
 }
